--- a/damda/app/src/main/res/values/strings.xml
+++ b/damda/app/src/main/res/values/strings.xml
@@ -75,7 +75,7 @@
     <string name="error_fail_login">아이디 혹은 비밀번호를 확인해주세요.</string>
     <string name="login_detail_title">로그인 성공</string>
     <string name="txtInputInfoID">최소 8자 이상</string>
-    <string name="txtInputInfoPWD">영문 대문자, 소문자, 숫자, 특수문자를 포함하여 8자 이상</string>
+    <string name="txtInputInfoPWD">영문, 숫자, 특수문자를 포함하여 8자 이상</string>
     <string name="txtInputInfoRePWD">비밀번호가 일치하지 않습니다.</string>
     <string name="txtInputInfoEmail">정확한 이메일이 아닙니다.</string>
     <string name="logout">로그아웃</string>
