--- a/damda-django/카카오 장고 초기 설정.md
+++ b/damda-django/카카오 장고 초기 설정.md
@@ -32,11 +32,13 @@ python manage.py createsuperuser
 * 마지막 줄 수정
 
 * ```python
+  from accounts.serializers import UserSerializer
+  
   result = {
           'token': token,
       }
       result.update(UserSerializer(user, context={'request': request}).data)
-      return result
+    return result
   ```
-
+  
   
