--- a/damda/app/src/main/res/values/strings.xml
+++ b/damda/app/src/main/res/values/strings.xml
@@ -85,7 +85,7 @@
     <string name="can_use_email">사용 가능한 이메일입니다.</string>
     <string name="error_do_not_check_id">아이디 중복 체크 확인해 주세요.</string>
     <string name="album_title">앨범이름</string>
-
     <string name="saveAlbum">앨범저장</string>
+    <string name="add_info">얼굴을 등록하면 손쉽게 앨범을 관리 할 수 있습니다.</string>
 
 </resources>
