S02P31B205-59 | Add photo delete

--- a/damda/app/src/main/res/values/strings.xml
+++ b/damda/app/src/main/res/values/strings.xml
@@ -88,4 +88,10 @@
 
     <string name="saveAlbum">앨범저장</string>
 
+
+    <!-- Photo -->
+    <string name="savePhoto">저장</string>
+    <string name="deletePhoto">삭제</string>
+    <string name="sharePhoto">공유</string>
+
 </resources>
