--- a/damda-django/카카오 장고 초기 설정.md
+++ b/damda-django/카카오 장고 초기 설정.md
@@ -29,6 +29,12 @@ python manage.py createsuperuser
 
 * `\venv\Lib\site-packages\rest_framework_jwt\utils.py`
 
+* ```python
+  from 
+  ```
+
+* 
+
 * 마지막 줄 수정
 
 * ```python
