--- a/damda/app/src/main/res/values/strings.xml
+++ b/damda/app/src/main/res/values/strings.xml
@@ -87,6 +87,7 @@
     <string name="album_title">앨범이름</string>
     <string name="saveAlbum">앨범저장</string>
     <string name="add_info">얼굴을 등록하면 손쉽게 앨범을 관리 할 수 있습니다.</string>
+    <string name="user_info">상세정보</string>
 
 
     <!-- Photo -->
