--- a/damda-django/카카오 장고 초기 설정.md
+++ b/damda-django/카카오 장고 초기 설정.md
@@ -23,17 +23,25 @@ python manage.py createsuperuser
 
 * `\venv\Lib\site-packages\allauth\account\adapter.py `
 
-* 210번째 줄 username을 email로 변경
+* 200번째 줄부터 `pipulate_user` 함수 끝까지
+
+  ```python
+  first_name = user_field(user, 'first_name', user_username(user))
+          email = user_email(user)
+          username = user_username(user)
+          if app_settings.USER_MODEL_USERNAME_FIELD:
+              user_username(
+                  user,
+                  email)
+  ```
+
+* `\venv\Lib\site-packages\allauth\account\utils.py`
+
+* 110번째 줄 탭해서 if안으로 넣기
 
 # 4. return 추가(무조건하기)
 
 * `\venv\Lib\site-packages\rest_framework_jwt\utils.py`
-
-* ```python
-  from 
-  ```
-
-* 
 
 * 마지막 줄 수정
 
