--- a/damda/app/src/main/res/values/strings.xml
+++ b/damda/app/src/main/res/values/strings.xml
@@ -86,6 +86,7 @@
     <string name="error_do_not_check_id">아이디 중복 체크 확인해 주세요.</string>
     <string name="add_info">얼굴을 등록하면 손쉽게 앨범을 관리 할 수 있습니다.</string>
     <string name="user_info">상세정보</string>
+    <string name="wait">진행중인 요청이 있습니다.\n담장이 수락하면 가족 앨범을 이용할 수 있습니다.</string>
 
     <!-- Album -->
     <string name="album_title">앨범 이름</string>
