--- a/damda/app/src/main/res/values/strings.xml
+++ b/damda/app/src/main/res/values/strings.xml
@@ -47,7 +47,8 @@
     <string name="send">Send</string>
 
     <!-- Add Photo -->
-    <string name="upload_image">Photo Upload</string>
+    <string name="select_image">사진 선택</string>
+    <string name="upload_image">업로드</string>
     <string name="hint_image_content">Image description</string>
     <string name="upload_success">Upload success</string>
     <string name="upload_fail">Upload fail</string>
