S02P31B205-84 | Fix main myalbum check

--- a/damda-django/카카오 장고 초기 설정.md
+++ b/damda-django/카카오 장고 초기 설정.md
@@ -47,12 +47,18 @@ python manage.py createsuperuser
 
 * ```python
   from accounts.serializers import UserSerializer
+  from albums.models import FamilyName
   
   result = {
           'token': token,
       }
       result.update(UserSerializer(user, context={'request': request}).data)
-    return result
+      album = FamilyName.objects.filter(user=result['id'], owner=result['id'])
+      if len(album) > 0:
+          result['my_album'] = True
+      else:
+          result['my_album'] = False
+      return result
   ```
   
   
