S02P31B205-119 | Fix select Album Title

--- a/damda/app/src/main/res/values/strings.xml
+++ b/damda/app/src/main/res/values/strings.xml
@@ -96,7 +96,7 @@
     <string name="saveAlbum">저장</string>
     <string name="album_image">앨범 이미지</string>
     <string name="albumImageChange">대표 이미지 변경</string>
-    <string name="deleteAlbum">삭제</string>
+    <string name="deleteAlbum">앨범 비우기</string>
 
     <!-- Photo -->
     <string name="savePhoto">저장</string>
@@ -129,12 +129,18 @@
     <string name="channel_description3">생일 축하메세지를 보여줍니다.</string>
 
     <!--  가족 관계 선택  -->
-    <string-array name="familyName">
+    <string-array name="familyNameF">
+        <item>엄마</item>
+        <item>아빠</item>
+        <item>언니</item>
+        <item>오빠</item>
+        <item>남동생</item>
+        <item>여동생</item>
+    </string-array>
+    <string-array name="familyNameM">
         <item>엄마</item>
         <item>아빠</item>
         <item>누나</item>
-        <item>언니</item>
-        <item>오빠</item>
         <item>형</item>
         <item>남동생</item>
         <item>여동생</item>
