--- a/damda/app/src/main/res/values/strings.xml
+++ b/damda/app/src/main/res/values/strings.xml
@@ -121,6 +121,7 @@
     <string name="trimming_progress">Trimming your video...</string>
 
     <!--  Notification channel  -->
+    <string name="default_notification_channel_id">PUSH</string>
     <string name="channel_name1">안부 묻기</string>
     <string name="channel_name2">새로운 사진</string>
     <string name="channel_name3">생일 축하</string>
