--- a/damda/app/src/main/res/values/strings.xml
+++ b/damda/app/src/main/res/values/strings.xml
@@ -73,6 +73,8 @@
     <string name="error_join_field_empty">모두 입력해주세요.</string>
     <string name="error_do_not_same_pwd">비밀번호를 확인해주세요.</string>
     <string name="error_discorrent_email">이메일을 확인해주세요.</string>
+    <string name="error_change_pwd">임시 비밀번호를 입력해주세요.</string>
+    <string name="error_change_pwd_confirm">임시 비밀번호를 확인해주세요.</string>
     <string name="error_fail_login">아이디 혹은 비밀번호를 확인해주세요.</string>
     <string name="login_detail_title">로그인 성공</string>
     <string name="txtInputInfoID">최소 8자 이상</string>
@@ -89,6 +91,7 @@
     <string name="family_info">음력 생일은 올해 해당 날짜로 표시 됩니다.</string>
     <string name="user_info">상세정보</string>
     <string name="wait">진행중인 요청이 있습니다.\n담장이 수락하면 가족 앨범을 이용할 수 있습니다.</string>
+    <string name="change_password">임시 비밀번호를 이메일에 전송하였습니다.</string>
 
     <!-- Album -->
     <string name="album_title">앨범 이름</string>
