--- a/damda/app/src/main/res/values/strings.xml
+++ b/damda/app/src/main/res/values/strings.xml
@@ -84,6 +84,7 @@
     <string name="txtInputInfoEmail">정확한 이메일이 아닙니다.</string>
     <string name="logout">로그아웃</string>
     <string name="error_do_not_input_id">아이디를 입력해주세요.</string>
+    <string name="error_de_not_exist_id">아이디를 확인해주세요.</string>
     <string name="error_exist_id">중복된 아이디가 있습니다.</string>
     <string name="error_exist_email">중복된 이메일이 있습니다.</string>
     <string name="can_use_email">사용 가능한 이메일입니다.</string>
