--- a/damda/app/src/main/res/values/strings.xml
+++ b/damda/app/src/main/res/values/strings.xml
@@ -90,7 +90,7 @@
     <string name="can_use_email">사용 가능한 이메일입니다.</string>
     <string name="error_do_not_check_id">아이디 중복 체크 확인해 주세요.</string>
     <string name="add_info">앨범이 있어야 요청을 수락 할 수 있습니다. 앨범이 없는 경우 앨범 생성 후 수락해 주세요.</string>
-    <string name="family_info">음력 생일은 올해 해당 날짜로 표시 됩니다.</string>
+    <string name="family_info">음력 생일은 올해 해당 양력 날짜로 표시 됩니다.</string>
     <string name="user_info">상세정보</string>
     <string name="wait">진행중인 요청이 있습니다.\n담장이 수락하면 가족 앨범을 이용할 수 있습니다.</string>
     <string name="change_password">임시 비밀번호를 이메일에 전송하였습니다.</string>
